--- a/services/chat-service/package.json
+++ b/services/chat-service/package.json
@@ -73,6 +73,7 @@
     "@sourceloop/core": "^6.1.2",
     "dotenv": "^16.0.0",
     "dotenv-extended": "^2.9.0",
+    "loopback-connector-postgresql": "^5.5.0",
     "loopback4-authentication": "^6.0.2",
     "loopback4-authorization": "^5.0.1",
     "prom-client": "^13.2.0",
