--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.2.0",
     "@nebular/eva-icons": "9.0.1",
     "@nebular/theme": "^9.0.1",
+    "angularx-social-login": "^4.0.1",
     "eva-icons": "^1.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
