WIP: API integration for chat.

--- a/facades/chat-server/src/datasources/auth-service.datasource.config.json
+++ b/facades/chat-server/src/datasources/auth-service.datasource.config.json
@@ -30,6 +30,18 @@
       "functions": {
         "getAuthToken": ["data"]
       }
+    },
+    {
+      "template": {
+        "method": "GET",
+        "url": "/auth/me",
+        "headers": {
+          "Authorization": "{token}"
+        }
+      },
+      "functions": {
+        "getProfile": ["token"]
+      }
     }
   ]
 }
