--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@nebular/theme": "^9.0.1",
     "angularx-social-login": "^4.0.1",
     "eva-icons": "^1.1.2",
+    "moment": "^2.29.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
