--- a/facades/chat-server/package.json
+++ b/facades/chat-server/package.json
@@ -41,7 +41,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "Bhanu Manthry <bhanuprasad.manthry@sourcefuse.com>",
+  "author": "Bhanu Manthry",
   "license": "",
   "files": [
     "README.md",
