--- a/services/chat-service/package.json
+++ b/services/chat-service/package.json
@@ -47,7 +47,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "Bhanu Manthry <bhanuprasad.manthry@sourcefuse.com>",
+  "author": "Bhanu Manthry",
   "license": "MIT",
   "files": [
     "README.md",
